--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -100,8 +100,13 @@
     font-size: 30px;
   }
 
+  .card-img {
+    max-height: 150px;
+  }
+
   .location {
     font-size: 24px;
+    text-align: center;
   }
 
   .description {
